# product-refinement

./: .env.example  .gitignore  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt  setup.py  spec.py
product_refinement/: __init__.py
product_refinement/cli/: commands.py
product_refinement/prompts/: __init__.py  final_refinement.txt  initial.txt  refinement.txt
product_refinement/utils/: config.py  storage.py  types.py  validation.py
prompts/: final_refinement.txt  initial.txt  refinement.txt
src/ai/: service.py
src/product_refinement/: __main__.py
src/product_refinement/ai/: service.py
src/product_refinement/cli/: commands.py
src/product_refinement/prompts/: __init__.py  final_refinement.txt  initial.txt  refinement.txt  todo.txt
src/product_refinement/prompts/engineering_todo/: __init__.py
src/product_refinement/prompts/idea/: __init__.py  final_refinement.txt  initial.txt  refinement.txt
src/product_refinement/prompts/product_requirements/: __init__.py  final_refinement.txt  initial.txt  todo.txt
src/product_refinement/utils/: config.py  storage.py  types.py
src/utils/: display.py
