[project]
name = "ai-spec-generator"
version = "0.1.0"
requires-python = ">=3.9"
description = "An AI-powered tool for generating and refining product specifications using the LLM library."
authors = [
    {name = "Allen Hutchison", email = "allen@hutchison.org"}
]
license = "MIT"
readme = "README.md"
dependencies = [
    "llm>=0.13.0",
    "python-dotenv>=1.0.0"  # Optional: For managing API keys securely
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_spec_generator"]

[tool.uv]
packages = [
    "llm>=0.13.0",
    "python-dotenv>=1.0.0"
]

[tool.uv.scripts]
start = "python spec.py"