[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "product-refinement"
version = "0.1.0"
description = "A tool for generating and refining product specifications using AI"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "llm>=0.12.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
scripts = { refine = "product_refinement.__main__:cli" }

[project.urls]
Homepage = "https://github.com/yourusername/product-refinement"
Repository = "https://github.com/yourusername/product-refinement.git"

[tool.setuptools]
packages = ["product_refinement"]

[tool.setuptools.package-data]
product_refinement = ["prompts/*.txt"]